<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/instructions_heading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/instructions_heading"
            android:textAlignment="center"
            android:textSize="32sp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/instructions_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/instructions_text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_below="@id/instructions_heading_text"/>

        <Button
            android:id="@+id/to_shoe_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_shoe_list"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="32dp"/>

    </RelativeLayout>
</layout>